# userbase

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64  Makefile  README.md
.github/workflows/: build.yml  ci.yml
config/: default.toml
cql/: init_data.cql  schema_keyspace _dev.cql  schema_keyspace.cql  schema_keyspace_test.cql  schema_table.cql
crates/axum-web/: Cargo.toml
crates/axum-web/src/: context.rs  erring.rs  object.rs
crates/scylla-orm/: Cargo.toml
crates/scylla-orm-macros/: Cargo.toml
src/: conf.rs  main.rs  router.rs
src/api/: authn.rs  group.rs  member.rs  mod.rs  passkey.rs  session.rs  user.rs
src/crypto/: cose_key.rs  ed25519.rs  eddsa_token.rs  kek_session.rs  mac_id.rs  mac_state.rs  mod.rs
src/db/: mod.rs  model_auth.rs  model_authn.rs  model_authz.rs  model_follow.rs  model_group.rs  model_member.rs  model_session.rs  model_user.rs  scylladb.rs
tests/keys/: ed25519-token.pub  encrypted-direct-id.key.cbor  encrypted-direct-session.key  encrypted-direct-session.key.cbor  encrypted-ed25519-token.key  encrypted-ed25519-token.key.cbor  encrypted-ed25519-token.pub.cbor
